Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.13.0, 0.14.0
-
None
Description
It seems that enums in the Rust implem are not forward compatible. As Thrift enums are mapped 1:1 to Rust enum, if a newer Thrift definition adds a case to an enum, an error will be returned when parsing the message.
Is this intended? Is there a workaround?
(We met this problem in the Rust parquet implem: https://issues.apache.org/jira/browse/ARROW-10553)
Attachments
Issue Links
- is superceded by
-
THRIFT-5392 Thrift Enums should generate forward compatible enum like code
- Open
- relates to
-
THRIFT-4101 Make auto-generated Rust enums and unions more user-extensible
- Closed
- links to