[THRIFT-5314][THRIFT-4101] Generate enums that don't error on unexpected values (#2337)

Client: rs